--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,7 @@ NOTE: TP de trois slots de 1h20
 ## Nom du(des) étudiant(e)(s) de ce monôme/binôme 
 WARNING: NE PAS OUBLIER DE MENTIONNER LES DEUX NOMS SI VOUS ETES EN BINOME!
 
-#XXX# (et #YYY#)
+GAETAN PELLERIN & FLORETTE DIEU
 
 Commentaires éventuels des étudiants : #XXXXXX#
 
@@ -40,10 +40,16 @@ TIP: [Rappel Git] Trois dépôts sont ici utilisés: le dépot Github de l'ensei
 * Observer le code du projet `todolist-debut-ex1`
 
 *Le code est-il structuré en couches ? Quel problèmes ce code peut-il poser ?*
+Le code n'est pas constitué en couche. Le code est plutôt constitué en monolythe Java Spring. Il y a les différents éléments nécessaire comme les entités, les controllers et le repository qui permet d'avoir un fort couplage entre les éléments. 
+Chaque partie a ses propres responsabilités mais ce n'est pas la notion de couche au niveau architecture
 
 *Où se trouve le code métier (voir la règle de gestion RG 1) ?*
+Dans le controlleur TodoLiseControler.java
 
 *Cette règle est-elle facilement testable par un test unitaire ?*
+Elle n'est pas facilement testable. Elle est privée ce qui pose un problème. 
+Il faut donc pour la tester réaliser un mock sur le Instant.now. 
+Ainsi on pourra tester tout les cas de tests. 
 
 * Lancer une base PostgreSQL en Docker dans un terminal (on lance ici la base en mode interactif pour visualiser son activité. Pour la lancer en tâche de fond, remplacer les options `it` par `d` comme 'daemon'):
 ```bash
@@ -51,9 +57,17 @@ docker run -it -e POSTGRES_PASSWORD=password -p 5432:5432 postgres
 ```
 *Expliquer cette ligne de commande (y compris les options utilisées)*
 
+On lance un conteneur Docker en utilisant l'image postgres. 
+-it permet de lancer un terminal en mode interactif
+
+-e permet de saisir une variable d'environnement
+
+-p mapping de port (permet de lié l'extérieur et l'intérieur par port). 
+
 * Compléter le code manquant dans la méthode `TodoListController.createTodoItem()`
 
 *Pourquoi `todoItemRepository` est-il `null` ? Quelle est la meilleure façon de l'injecter ?*
+Il est null car la variable n'est pas initialiser.Il faut faire une injection. Il faut mettre un @Inject. 
 
 * Modifier le code en conséquence.
 
@@ -96,6 +110,11 @@ Source : http://leanpub.com/get-your-hands-dirty-on-clean-architecture[Tom Hombe
 
 *Rappeler en quelques lignes les grands principes de l'architecture hexagonale.*
 
+L'architecture hexagonale permet de séparer deux choses. Elle permet de séparer l'aspect métier du domaine technique. 
+Il faut donc utiliser des ports comme vu précédemment pour utilisé cette interface entre ces deux domaines. 
+Ainsi nous avons le principe de faible couplage et forte cohésion. 
+Comme vu lors des cours de TD.
+
 Compléter ce code avec une fonctionnalité de création de `TodoItem`  persisté en base et appelé depuis un endpoint REST `POST /todos` qui :
 
 * prend un `TodoItem` au format JSON dans le body (voir exemple de contenu plus haut);
@@ -112,7 +131,11 @@ _Temps estimé : 20 mins_
 
 *Quels types de tests devra-t-on écrire pour les adapteurs ?* 
 
+Un adaptateur est conçu pour faire le lien entre la technique (serveur, BDD, etc..) Il faut créer des tests d'intégration pour vérifier cela.
+
 *Que teste-on dans ce cas ?*
+
+Il faut tester si les données arrivent bien à passer ces différentes ressources et faire les liens avec les ports. 
 
 *S'il vous reste du temps, écrire quelques uns de ces types de test.*
 
